# OnlineShop

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  prometheus.yml  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 2024_01_05_1928-e20defe2a846_create_table_v8.py  2024_01_05_2014-a625298f9a77_create_table_v5.py  2024_01_10_1313-d4b8bfd1764d_create_table_v7.py  2024_01_27_2016-4a84b1e4b036_create_tables.py  2024_01_27_2018-78c83f56ee53_create_tables_v2.py  2024_02_06_2214-2e3a5e9de9e2_update_name_tables.py  2024_02_10_1601-f7b695b040f1_create_tables.py  2024_02_22_1744-0999cc4b2ee4_add_column_discount_in_product.py  2024_02_24_1334-3ed1a0b53418_add_column_reserved_quantity_in_table_.py  2024_02_24_1336-657d3718f12f_add_column_reserved_quantity_in_table_.py
app/: config.py  logging_config.py  main.py
app/api_v1/: __init__.py
app/api_v1/admin_panel/: __init__.py  auth.py  views.py
app/api_v1/auth/: README.md  __init__.py  cookie_token_service.py  password_service.py  schemas.py  token_jwt_service.py  user_auth.py  user_manager.py
app/api_v1/cart/: __init__.py  models.py  repository.py  routers.py  schemas.py  services.py
app/api_v1/categories/: __init__.py  models.py  repository.py  routers.py  schemas.py  services.py
app/api_v1/depends/: dependencies.py
app/api_v1/exceptions/: __init__.py  exception.py
app/api_v1/middlewares/: middleware.py
app/api_v1/orders/: __init__.py  models.py  repository.py  routers.py  schemas.py  services.py
app/api_v1/pages/: views.py
app/api_v1/products/: __init__.py  models.py  repository.py  routers.py  schemas.py  services.py
app/api_v1/profiles/: __init__.py  models.py  repository.py  routers.py  schemas.py  services.py
app/api_v1/repositories/: base_repository.py
app/api_v1/tasks/: celery_app.py  routers.py
app/api_v1/templates/: discounts.html
app/api_v1/users/: __init__.py  constants.py  creators.py  database.py  models.py  routers.py  schemas.py  utils.py  validators.py
app/api_v1/utils/: send_letter_on_email.py  unitofwork.py
app/db/: __init__.py  database.py
conf.d/: app.conf
docker_script/: app.sh
docs/: technical_specification.md
tests/: conftest.py  test_auth.py
tests/auth/: conftest.py  test_auth.py
tests/cart/: conftest.py  test_cart.py
tests/categories/: test_caregories.py
tests/category/: test_category.py
tests/order/: conftest.py  test_order.py
tests/product/: conftest.py  test_product.py
tests/profile/: test_profile.py
tests/user_managment/: test_user_managment.py
