[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Никита Швейцер <shveitcer2023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = { extras = ["standart"], version = "^0.24.0.post1" }
fastapi = { extras = ["all"], version = "^0.104.1" }
asyncpg = "^0.29.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.23" }
alembic = "^1.13.0"
aiosqlite = "^0.19.0"
pyjwt = { extras = ["crypto"], version = "^2.8.0" }
bcrypt = "^4.1.1"
python-multipart = "^0.0.6"
aiosmtplib = "^3.0.1"
fastapi-cache2 = { extras = ["redis"], version = "^0.2.1" }
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0"}
flake8 = "^7.0.0"
flake8-bugbear = "^24.1.17"
flake8-builtins = "^2.2.0"
pep8-naming = "^0.13.3"
flake8-variables-names = "^0.0.6"
flake8-import-order = "^0.18.2"
celery = {extras = ["redis"], version = "^5.3.6"}
flower = "^2.0.1"
gunicorn = "^21.2.0"
flake8-pyproject = "^1.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
pytest-asyncio = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:warnings"
pythonpath = [".", "app"]
asyncio_mode = "auto"
env_files = ".env.dev"


[tool.flake8]
exclude = [
    ".git",
    ".env",
    ".env.example",
    "venv",
    "pycache",
    "certs",
    "docker_script",
    "pg_data",
    "app.log",
    ".dockerignore",
    "setup.cfg",
    "README.md"
]
max-line-length = 120
max-complexity = 8
