[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Никита Швейцер <shveitcer2023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = { extras = ["standart"], version = "^0.24.0.post1" }
asyncpg = "^0.29.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.23" }
alembic = "^1.13.0"
aiosqlite = "^0.19.0"
pyjwt = { extras = ["crypto"], version = "^2.8.0" }
bcrypt = "^4.1.1"
python-multipart = "^0.0.6"
aiosmtplib = "^3.0.1"
fastapi-cache2 = { extras = ["redis"], version = "^0.2.1" }
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0"}
flake8 = "^7.0.0"
flake8-bugbear = "^24.1.17"
flake8-builtins = "^2.2.0"
pep8-naming = "^0.13.3"
flake8-variables-names = "^0.0.6"
flake8-import-order = "^0.18.2"
celery = {extras = ["redis"], version = "^5.3.6"}
flower = "^2.0.1"
gunicorn = "^21.2.0"
flake8-pyproject = "^1.2.3"
sqladmin = "^0.16.0"
fastapi = "^0.109.2"
starlette-exporter = "^0.21.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.1.0"
pydantic = {extras = ["email"], version = "^2.6.1"}
itsdangerous = "^2.1.2"
isort = "^5.13.2"
httpx = "^0.26.0"
responses = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:warnings"
pythonpath = [".", "app"]
asyncio_mode = "auto"
env_files = ".env.dev"

[tool.flake8]
exclude = [
    ".git",
    ".env",
    ".env.example",
    "venv",
    "pycache",
    "certs",
    "docker_script",
    "pg_data",
    "alembic",
    "app.log",
    "conf.d",
    ".dockerignore",
    "setup.cfg",
    "README.md"
]
max-line-length = 120
ignore = ["A003", "VNE003", "I100", "I201", "B008"]
max-complexity = 8

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
use_parentheses = true
multi_line_output = 3
force_single_line = true
lines_after_imports = 2
